[gd_scene load_steps=4 format=3 uid="uid://brbehgq588b5x"]

[ext_resource type="Script" path="res://hacker.gd" id="1_17maw"]
[ext_resource type="FontFile" uid="uid://onwv1b6vwwk2" path="res://assets/fonts/OpenSans-Bold.ttf" id="2_jg4qb"]
[ext_resource type="Texture2D" uid="uid://d2pbsu6ek1m5m" path="res://assets/apps/close.png" id="3_566cj"]

[node name="Hacker" type="Control"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17maw")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Root" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Decrypt" type="VBoxContainer" parent="Root/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="Loading" type="Label" parent="Root/Left/Decrypt"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "DONE"
horizontal_alignment = 1

[node name="Steps" type="Label" parent="Root/Left/Decrypt"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
text = "Loading file.. 100%
Finding header... 100%
Verifying content... 100%
Loading codes... 100%"
horizontal_alignment = 3

[node name="Matrix" type="GridContainer" parent="Root/Left"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="Label1" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label13" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label14" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label15" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label16" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label17" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label18" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label19" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label20" type="Label" parent="Root/Left/Matrix"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Password" type="Control" parent="Root/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="Label" parent="Root/Left/Password"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "{password: \"\", salt: \"\", hash: \"\"}"
autowrap_mode = 3
clip_text = true

[node name="Center" type="VBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Resources" type="HBoxContainer" parent="Root/Center"]
layout_mode = 2
size_flags_vertical = 3

[node name="Monitor" type="HBoxContainer" parent="Root/Center/Resources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="Root/Center/Resources/Monitor"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "CPU
Mem
Net"
vertical_alignment = 1

[node name="Bars" type="Label" parent="Root/Center/Resources/Monitor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "[||||| ]
[||||| ]
[||||| ]"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Percentage" type="Label" parent="Root/Center/Resources/Monitor"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "50%
50%
50%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Tasks" type="Label" parent="Root/Center/Resources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="Root/Center"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Console" type="Label" parent="Root/Center/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 8
text = "Welcome to the DigiOS Hacking Terminal..."
clip_text = true

[node name="State" type="Button" parent="Root/Center"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "CÍL
ZRANITELNÝ"
flat = true

[node name="StateEdit" type="TextEdit" parent="Root/Center"]
visible = false
layout_mode = 2
text = "CÍL
ZRANITELNÝ"
scroll_fit_content_height = true

[node name="Right" type="VBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Ping" type="Control" parent="Root/Right"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Root/Right/Ping"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
autowrap_mode = 3
clip_text = true

[node name="IP" type="Control" parent="Root/Right"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Root/Right/IP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "192.168.0.100
192.168.12.418
192.168.48.501"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Network" type="Control" parent="Root/Right"]
layout_mode = 2
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="Root/Right/Network"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0, 0, 1)

[node name="Status" type="Label" parent="Root/Right/Network"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "CONNECTION LOST"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="WindowBarBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
grow_horizontal = 2
color = Color(0.321569, 0.721569, 0.8, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
grow_horizontal = 2

[node name="Padding1" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jg4qb")
text = "HACKING TERMINAL"

[node name="Padding2" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="Close" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("3_566cj")
texture_pressed = ExtResource("3_566cj")
texture_hover = ExtResource("3_566cj")
texture_disabled = ExtResource("3_566cj")
ignore_texture_size = true
stretch_mode = 5

[node name="Padding4" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="DecryptTimer" type="Timer" parent="."]
one_shot = true

[node name="PasswordTimer" type="Timer" parent="."]
one_shot = true

[node name="TasksTimer" type="Timer" parent="."]
one_shot = true

[node name="IPTimer" type="Timer" parent="."]
one_shot = true

[node name="RefreshTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Root/Center/State" to="." method="_on_state_pressed"]
[connection signal="text_changed" from="Root/Center/StateEdit" to="." method="_on_state_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="timeout" from="DecryptTimer" to="." method="_on_decrypt_timer_timeout"]
[connection signal="timeout" from="PasswordTimer" to="." method="_on_password_timer_timeout"]
[connection signal="timeout" from="TasksTimer" to="." method="_on_tasks_timer_timeout"]
[connection signal="timeout" from="IPTimer" to="." method="_on_ip_timer_timeout"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
