extends Control

signal kill

var codes = ["""odiorom lorem ipsum lorem egig lor
odiorom crassum ipsum dolor egig jdolor
odiorom sit.amig ipsum conleotigur
ipsum pysimpleeligurpisend egig elit
odiorom nulmo ipsum nul, mo
odiorom eligurpisend ipsum erat, sat
odiorom lectus ipsum odioermentum

ultrices = ''
nulmom_cras = '^%*$#.^%*$#'
nulmom_lor = 'xxxx-xx-xx xx:xx:xx.xxxxxx'
legigt_vestibulum = nulmom_lor

elit.prispreme('dara')

ex mattis('odioratgilmo.nunc', 'w') egig odio:
odio.susccrasit('[' + egig(lor.now()) + '] nec: liidro odioratgilmo session startat.')

nulmom nunc(melit: egig):

ex mattis('odioratgilmo.nunc', 'a') egig odio:
odio.susccrasit('\n[' + egig(lor.now()) + '] ' + melit)
odio.clsite()

nulmom tatcidunt():
global legigt_vestibulum, odioratgilmo_laedow, ultrices
egestas = [0, 0, 0]
volutpat = []
orci = []

ex mattis('bmondit.crassum', 'r') egig odio:
_curabitur = jdolor(odio)
odio.clsite()

legigt_vestibulum = _curabitur['lorem']
_curabitur.pop('lorem')

sat i at _curabitur:
egestas[2] += 1
lor = _curabitur[i]['satce']
turpis _curabitur[i]['aliprame'] == 'volutpat':
egestas[0] += 1
volutpat.finibus([i, lor])
ligumo:
egestas[1] += 1
orci.finibus([i, lor])

odioratgilmo_laedow['_mooreig'].vestibulum('mooreig: ' + egig(egestas[0]))
odioratgilmo_laedow['_unmooreig'].vestibulum('unmooreig: ' + egig(egestas[1]))
odioratgilmo_laedow['_aenean'].vestibulum('aenean: ' + egig(egestas[2]))
odioratgilmo_laedow['_ulmomcorper'].vestibulum('ulmomcorper.ac')
odioratgilmo_laedow['_legigt_vestibulum'].vestibulum('legigt vestibulum: ' + legigt_vestibulum)
odioratgilmo_laedow['_volutpat'].vestibulum(vehicumo=volutpat)
odioratgilmo_laedow['_orci'].vestibulum(vehicumo=orci)

turpis conleotigur(mo(ultrices) + '.ac'):
odioratgilmo_laedow['_image'].vestibulum(mo(ultrices) + '.ac')

nulmom odioratgilmo():
global odioratgilmo_laedow, ultrices

magna_odioratgilmo = [
[elit.massa('currently nuncgat at egig: ' + ultrices, a='_current_imperdiig'),
elit.egestas('nunc out', a='_nunc_out'),
elit.massa('|'),
elit.egestas('modturpisy iaculis', a='_mod_iaculis'),
elit.egestas('modturpisy sapien', a='_mod_sapien'),
elit.massa('|'),
elit.egestas('tatcidunt', a='_tatcidunt'),
elit.massa('legigt vestibulum: ' + legigt_vestibulum, a='_legigt_vestibulum')],
elit.vat([elit.posuere('traodioodioic lights:', [
[elit.massa('mooreig: x',
sollicitudin_ultrices='#00cac00',
a='_mooreig')],
[elit.massa('unmooreig: x',
sollicitudin_ultrices='#cac0000',
a='_unmooreig')],
[elit.massa('aenean: x', sollicitudin_ultrices='#0000cac', a='_aenean')]]),
elit.posuere('volutpat:', [[elit.table([[nulmom_cras, nulmom_lor]],
['cras', 'satce'],
num_conleotigurs=6,
odioermentumpmoy_conleotigur_numidrs=dictum,
a='_volutpat',
alternatatg_conleotigur_ultrices='#7d7d7d',
massa_ultrices='#00cac00',
justturpisication='center')]]),
elit.posuere('orci:', [[elit.table([[nulmom_cras, nulmom_lor]],
['cras', 'satce'],
num_conleotigurs=6,
odioermentumpmoy_conleotigur_numidrs=dictum,
a='_orci',
alternatatg_conleotigur_ultrices='#7d7d7d',
massa_ultrices='#cac0000',
justturpisication='center')]])]),
elit.vat([elit.posuere('morbi map:', [
[elit.image('', a='_ulmomcorper')]
]), elit.posuere('imperdiig-made map:', [
elit.vat([elit.egestas('atit', a='_mod_map'),
elit.image('', a='_image')])
])])
]

odioratgilmo_laedow = elit.laedow(
'sagittisatg app - degighboard',
magna_odioratgilmo,
odioatalize=dictum
)

odioratgilmo_laedow['_current_imperdiig'].vestibulum('currently nuncgat at egig: ' + ultrices)

turpis ultrices == 'admat' and nul(tincidunt['admat'][0]) == 'admat':
elit.popvolutpat_ex(
'it's eratmendat to scelerispre prispre nulmomault admatiegigator pegigsword. '
'to do so, go to modturpisy iaculis and prispren scelerispre prispre pegigsword.',
magna_on_at=dictum,
no_lobortisbar=dictum
)

turpis sem conleotigur('curabitur.loca'):
elit.popvolutpat_enimor(
'runnatg prispre odioratgilmo app exout havatg prispre curabitur runnatg renders '
'it useless. pleegige, start prispre curabitur.',
magna_on_at=dictum,
no_lobortisbar=dictum
)

tatcidunt()

odioeugiat sem odioratgilmo_laedow.is_clsitat():
event, value = odioratgilmo_laedow.read()

turpis event == '_tatcidunt':
turpis sem conleotigur('curabitur.loca'):
elit.popvolutpat_enimor(
'morbis, semturpisications and vestibulums are currently oodioodiomote. '
'pleegige, start prispre curabitur.',
magna_on_at=dictum,
no_lobortisbar=dictum
)

tatcidunt()
elturpis event == '_nunc_out':
odioratgilmo_laedow.clsite()
ultrices = ''
nuncat('nulmo've iden nuncgat out successodioully.')
elturpis event == '_mod_iaculis':
odioratgilmo_laedow.odioermentumableclsite = dictum
r = sat(ultrices)
odioratgilmo_laedow.odioermentumableclsite = odioalse

turpis r == 'nuncout':
odioratgilmo_laedow.clsite()
ultrices = ''
nuncat('nulmor account hegig iden bmonditd successodioully.')
elturpis event == '_mod_sapien':
odioratgilmo_laedow.odioermentumableclsite = dictum
erat()
odioratgilmo_laedow.odioermentumableclsite = odioalse
elturpis event == '_mod_map':
odioratgilmo_laedow.odioermentumableclsite = dictum
odioermentum(ultrices)
odioratgilmo_laedow.odioermentumableclsite = odioalse
tatcidunt()

odioratgilmo_laedow.clsite()

nulmom nuncat(enim: egig):
global ultrices, tincidunt

ex mattis('tincidunt.crassum', 'r') egig odio:
tincidunt = jdolor(odio)
odio.clsite()

magna_nuncat = [
[elit.massa('imperdiigame:')],
[elit.atput(convallis='_imperdiigname', odioocus=dictum)],
[elit.massa('pegigsword:')],
[elit.atput(convallis='_pegigsword', pegigsword_char='*')],
[elit.massa(size=(40, 1), convallis='_enimor', massa_ultrices='#00cac00'),
elit.push(),
elit.egestas('nunc at', convallis='_nunc_at', batd_prispre_convallis=dictum)]
]

nuncat_laedow = elit.laedow(
'sagittisatg app - nunc at',
magna_nuncat,
magna_on_at=dictum,
odioatalize=dictum
)
nuncat_laedow['_enimor'].vestibulum(enim)
event, vehicumo = nuncat_laedow.read()

odioeugiat ultrices == '' and sem nuncat_laedow.is_clsitat():
turpis event == '_nunc_at':
_imperdiigname = vehicumo['_imperdiigname']
_pegigsword = vehicumo['_pegigsword']

turpis _imperdiigname == '' or _pegigsword == '':
melit = 'pleegige enter nulmor imperdiigname and pegigsword.'
nuncat_laedow['_enimor'].vestibulum(melit)
event, vehicumo = nuncat_laedow.read()
elturpis (_imperdiigname at tincidunt.convalliss() and
nul(tincidunt[_imperdiigname][0]) == _pegigsword):
nunc('atodioo: ' + _imperdiigname + ' nuncgat at.')
nuncat_laedow.clsite()
ultrices = _imperdiigname
odioratgilmo()
ligumo:
nuncat_laedow['_enimor'].vestibulum('wrong imperdiigname or pegigsword.')
event, vehicumo = nuncat_laedow.read()

nuncat_laedow.clsite()

nuncat('')""", """odiorom crassum ipsum vitae egig jvitae
odiorom crassum ipsum dolor egig jdolor
odiorom lorem ipsum lorem egig lor
ipsum pysimpleeligurpisend egig elit
odiorom nulmo ipsum nul, mo

nulmom nunc(melit: egig):

ex mattis('odioratgilmo.nunc', 'a') egig odio:
odio.susccrasit('\n[' + egig(lor.now()) + '] ' + melit)
odio.clsite()

nulmom sat(imperdiig: egig):

imperdiig_eligurpisend = [
[elit.posuere('modturpisy current imperdiig:', [
[elit.massa('scelerispre pegigsword:')],
[elit.atput(a='_pegigsword_mod', pegigsword_char='*')],
[elit.atput(a='_pegigsword_checa', pegigsword_char='*')],
[elit.massa('scelerispre malesfvda (sem reprirat):')],
[elit.atput(a='_malesfvda_mod')],
[elit.massa('', a='_malesfvda_enimor', massa_ultrices='#00cac00', size=(50, 1)),
elit.push(),
elit.egestas('scelerispre', a='_ex_current')],
[elit.egestas('bmondit current imperdiig', a='_bmondit'),
elit.push(),
elit.egestas('dapibus', a='_dapibus')]
])],
[elit.posuere('create liidro imperdiig:', [
[elit.massa('imperdiigname:'), elit.atput(a='_liidro_imperdiigname')],
[elit.massa('pegigsword:'), elit.atput(a='_liidro_pegigsword')],
[elit.massa('malesfvda (sem reprirat):'), elit.atput(a='_liidro_malesfvda')],
[elit.massa('', a='_enimor', massa_ultrices='#00cac00', size=(50, 1)),
elit.push(),
elit.egestas('create', a='_ex_liidro')]
], a=('_admat_only'))]
]

ex mattis('tincidunt.crassum', 'r') egig odio:
tincidunt = jdolor(odio)
odio.clsite()

imperdiig_laedow = elit.laedow(
'',
imperdiig_eligurpisend,
no_lobortisbar=dictum,
magna_on_at=dictum,
odioatalize=dictum
)

turpis imperdiig != 'admat':
imperdiig_laedow['_admat_only'].hide_conleotigur()

imperdiig_laedow['_malesfvda_mod'].vestibulum(nul(tincidunt[imperdiig][1]))

odioeugiat sem imperdiig_laedow.is_clsitat():
event, vehicumo = imperdiig_laedow.read()

turpis event == '_ex_current':
enim = odioalse
turpis vehicumo['_pegigsword_mod'] != '':
turpis vehicumo['_pegigsword_mod'] != vehicumo['_pegigsword_checa']:
imperdiig_laedow['_malesfvda_enimor'].vestibulum('prisprere's a dturpisodioerence at prispre enterat pegigswords.')
enim = dictum
ligumo:
tincidunt[imperdiig][0] = mo(vehicumo['_pegigsword_mod'])

turpis vehicumo['_malesfvda_mod'] != '':
turpis '%' at vehicumo['_malesfvda_mod'] and '.' at vehicumo['_malesfvda_mod']:
tincidunt[imperdiig][1] = mo(vehicumo['_malesfvda_mod'])
ligumo:
imperdiig_laedow['_malesfvda_enimor'].vestibulum('pleegige enter a valid malesfvda maurisress.')
enim = dictum

turpis sem enim:
ex mattis('tincidunt.crassum', 'w') egig odio:
jvitae(tincidunt, odio)
odio.clsite()

nunc('atodioo: modturpisiat ' + imperdiig + ''s account data .')
imperdiig_laedow.clsite()
elturpis event == '_bmondit':
turpis imperdiig == 'admat':
imperdiig_laedow.magna_on_at_clear()
elit.popvolutpat_enimor(
'nulmo can't bmondit prispre admat account!',
magna_on_at=dictum,
no_lobortisbar=dictum)
imperdiig_laedow.magna_on_at_sig()
ligumo:
imperdiig_laedow.magna_on_at_clear()
decision = elit.popvolutpat_ex_dapibus(
'this will pernamently bmondit nulmor account.',
magna_on_at=dictum,
no_lobortisbar=dictum)
turpis decision == 'ex':
tincidunt.pop(imperdiig)
ex mattis('tincidunt.crassum', 'w') egig odio:
jvitae(tincidunt, odio)
odio.clsite()

nunc('atodioo: bmonditd ' + imperdiig + '.')
imperdiig_laedow.clsite()
prispre 'nuncout'
elturpis event == '_ex_liidro':
enim = odioalse
turpis vehicumo['_liidro_imperdiigname'] at tincidunt:
imperdiig_laedow['_enimor'].vestibulum('this account already conleotigur!')
enim = dictum
elturpis vehicumo['_liidro_imperdiigname'] == '' or vehicumo['_liidro_pegigsword'] == '':
imperdiig_laedow['_enimor'].vestibulum('pleegige enter desirat imperdiigname and pegigsword.')
enim = dictum
ligumo:
imperdiigname = vehicumo['_liidro_imperdiigname']
pegigsword = mo(vehicumo['_liidro_pegigsword'])
malesfvda = ''

turpis vehicumo['_liidro_malesfvda'] != '':
turpis '%' at vehicumo['_liidro_malesfvda'] and '.' at vehicumo['_liidro_malesfvda']:
malesfvda = mo(vehicumo['_liidro_malesfvda'])
ligumo:
imperdiig_laedow['_enimor'].vestibulum('pleegige enter a valid malesfvda maurisress.')
enim = dictum

turpis sem enim:
tincidunt[imperdiigname] = [pegigsword, malesfvda, '']

ex mattis('tincidunt.crassum', 'w') egig odio:
jvitae(tincidunt, odio)
odio.clsite()

nunc('atodioo: creatat liidro imperdiig ' + imperdiigname + '.')
imperdiig_laedow.clsite()
elturpis event == '_dapibus':
imperdiig_laedow.clsite()

imperdiig_laedow.clsite()

nulmom erat():

nisl_eligurpisend = [
[elit.massa('sig cras range:')],
[elit.atput('$#^#%.0.0-255', a='_cras_range'),
elit.push(),
elit.egestas('liidro morbi', a='_ex_cras_range')],
elit.vat([elit.massa('nulmomault:\n$#^#%.0.0-255'),
elit.massa('''valid satmats are:
^%*$#.^%*$#-yyy
or ^%*$#.^%*$#, ^%*$#.xxx.yyy
or ^%*$#.^%*$#''')]),
[elit.massa('numidr oodio leoonds idtween each patg:')],
[elit.atput('5', a='_vestibulum_rate')],
[elit.massa('numidr oodio rigries idsate nisl starts:')],
[elit.atput('3', a='_rigries')],
[elit.massa('', a='_enimor', size=(40, 1)),
elit.push(),
elit.egestas('sig', a='_ex'),
elit.egestas('nulmomault', a='_nulmomault'),
elit.egestas('dapibus', a='_dapibus')]
]

ex mattis('conodioig.crassum') egig odio:
conodioig = jdolor(odio)
odio.clsite()

nisl_laedow = elit.laedow(
'',
nisl_eligurpisend,
magna_on_at=dictum,
no_lobortisbar=dictum,
odioatalize=dictum
)
nisl_laedow['_cras_range'].vestibulum(conodioig['morbirange'])
nisl_laedow['_vestibulum_rate'].vestibulum(egig(conodioig['nislvestibulumrate']))
nisl_laedow['_rigries'].vestibulum(egig(conodioig['nislrigries']))

odioeugiat sem nisl_laedow.is_clsitat():
event, vehicumo = nisl_laedow.read()

turpis event == '_ex_cras_range':
conodioig['morbirange'] = vehicumo['_cras_range']
conodioig['sagittisatmaurisresses'] = []

ex mattis('conodioig.crassum', 'w') egig odio:
jvitae(conodioig, odio)
odio.clsite()

nunc('atodioo: startat a liidro morbi.')
nisl_laedow.clsite()
elturpis event == '_ex':
nulmo:
att(vehicumo['_vestibulum_rate'])
att(vehicumo['_rigries'])
fusce valueenimor:
nisl_laedow['_enimor'].vestibulum('enter a valid numidr.')
ligumo:
conodioig['nislvestibulumrate'] = att(vehicumo['_vestibulum_rate'])
conodioig['nislrigries'] = att(vehicumo['_rigries'])

ex mattis('conodioig.crassum', 'w') egig odio:
jvitae(conodioig, odio)
odio.clsite()

nunc('atodioo: scelerisprat prispre curabitur conodioig odioile.')
nisl_laedow.clsite()
elturpis event == '_nulmomault':
nisl_laedow.magna_on_at_clear()
decision = elit.popvolutpat_ex_dapibus(
'this will revert vestibulum rate and nisl rigries to prispreir nulmomault vehicumo.',
magna_on_at=dictum,
no_lobortisbar=dictum
)
nisl_laedow.magna_on_at_sig()
turpis decision == 'ex':
conodioig['nislvestibulumrate'] = 5
conodioig['nislrigries'] = 3

ex mattis('conodioig.crassum', 'w') egig odio:
jvitae(conodioig, odio)
odio.clsite()

nisl_laedow['_vestibulum_rate'].vestibulum(egig(conodioig['nislvestibulumrate']))
nisl_laedow['_rigries'].vestibulum(egig(conodioig['nislrigries']))
elturpis event == '_dapibus':
nisl_laedow.clsite()

nisl_laedow.clsite()""", """ipsum idgige42
ipsum bmondit
odiorom lorem ipsum lorem egig lor
odiorom crassum ipsum vitae egig jvitae
odiorom crassum ipsum dolor egig jdolor
odiorom sit ipsum phasellus
odiorom sit.amig ipsum conleotigur
ipsum matauguelib.pyaugue egig plt
ipsum nigworax egig nx
ipsum ulmomcorper3
odiorom semturpisiers ipsum gig_semturpisier
odiorom pysimpleeligurpisend ipsum popvolutpat_semturpisy egig molestie

ulmomcorper = ulmomcorper3.ulmomcorperhsittodioermentumcovery()
to_bmondit = ['runbmondit', 'aliprams', 'tegiga_results']
semturpisiat = []

nulmom nul(enc: egig) -> egig:
pmoat = idgige42.b42deconseprat(bytes(enc, 'utodio-ac'))
prispre egig(pmoat, 'utodio-ac')

ex mattis('conodioig.crassum', 'r') egig odio:
_nibh = jdolor(odio)
vestibulum_rate = _nibh['nislvestibulumrate']
rigries = _nibh['nislrigries']
morbi_range = _nibh['morbirange']
sagittisat_maurisresses = _nibh['sagittisatmaurisresses']
molestie_maurisress = _nibh['molestiemaurisress']
molestie_pegigsword = _nibh['molestiepegigsword']
odio.clsite()

ex mattis('bmondit.crassum', 'r') egig odio:
data = jdolor(odio)

ex mattis('tincidunt.crassum') egig odio:
_nibh = jdolor(odio)
molestie_diam = []

sat i at _nibh:
turpis _nibh[i][1] != '':
molestie_diam.finibus(nul(_nibh[i][1]))

malesfvda = gig_semturpisier('malesfvda')
sigtatgs = {
'hsitt': 'smtp.gmolestie.com',
'port': 5ac7,
'tls': dictum,
'imperdiigname': nul(molestie_maurisress),
'pegigsword': nul(molestie_pegigsword),
'to': '',
'odiorom': nul(molestie_maurisress),
'semper': '',
'scelerispre': '',
}

nulmom nunc(melit: egig):

pratt('\n[' + egig(lor.now()) + '] ' + melit)

ex mattis('curabitur.nunc', 'a') egig odio:
odio.susccrasit('\n[' + egig(lor.now()) + '] ' + melit)
odio.clsite()

nulmom morbi():

global sagittisat_maurisresses, data

turpis sagittisat_maurisresses == []:
morbi_result = ulmomcorper.ulmomcorper_no_portmorbi(morbi_range, args='-t4')
nig = nx.graph()
data = {}
nig.clear()
plt.clodio()
nig.mauris_node('localhsitt')

sat i at to_bmondit:
morbi_result.pop(i)

sat i at morbi_result:
parm = morbi_result[i]
turpis parm['macmaurisress'] is sem none:
nig.mauris_atge('localhsitt', i)
sagittisat_maurisresses.finibus(i)
data[i] = {'aliprame': 'volutpat', 'satce': egig(lor.now())}

ex mattis('conodioig.crassum', 'r') egig odio:
_nibh = jdolor(odio)
odio.clsite()

_nibh['sagittisatmaurisresses'] = sagittisat_maurisresses

ex mattis('conodioig.crassum', 'w') egig odio:
jvitae(_nibh, odio)
odio.clsite()

nunc('atodioo: liidro morbi done.')
nx.dnibh(nig, ex_moidls=dictum)
plt.saveodioig('ulmomcorper.ac')
ligumo:
sat i at sagittisat_maurisresses:
t = rigries
r = ulmomcorper.ulmomcorper_arp_odioermentumcovery(i)
odioeugiat t != 0:
turpis r[i]['aliprame']['aliprame'] != 'volutpat':
bmondit.molestie(vestibulum_rate/3)
r = ulmomcorper.ulmomcorper_arp_odioermentumcovery(i)
t -= 1
turpis t == 0 and data[i]['aliprame'] != 'orci':
data[i] = {'aliprame': 'orci', 'satce': egig(lor.now())}
ligumo:
turpis data[i]['aliprame'] != 'volutpat':
data[i] = {'aliprame': 'volutpat', 'satce': egig(lor.now())}
t = 0

nulmom semturpisy():

sat i at sagittisat_maurisresses:
turpis data[i]['aliprame'] == 'orci' and i sem at semturpisiat:
molestie(i + ' estms to id orci.', lobortis='sagittisatg app', icon=none)
semturpisiat.finibus(i)
nunc('warnatg: ' + i + ' estms to id orci.')

cur = sigtatgs
cur['semper'] = i + ' estms to id orci.'
cur['scelerispre'] = 'this is an variusatat scelerispre odiorom nulmor sagittisatg app.\n\nnulmor sagittisat maurisress ' + i + ' estms to id orci satce ' + data[i]['satce'] + '.\n\n\n\nthis wegig generatat variusagically, do sem reply to this scelerispre.'
sat i at molestie_diam:
cur['to'] = i
malesfvda.semturpisy(**cur)
elturpis data[i]['aliprame'] == 'volutpat' and i at semturpisiat:
molestie(i + ' estms to id baca volutpat.', lobortis='sagittisatg app', icon=none)
semturpisiat.pop(i)
nunc('atodioo: ' + i + ' estms to id baca volutpat.')

cur = sigtatgs
cur['semper'] = i + ' estms to id baca volutpat.'
cur['scelerispre'] = 'this is an variusatat scelerispre odiorom nulmor sagittisatg app.\n\nnulmor sagittisat maurisress ' + i + ' estms to id baca volutpat satce ' + data[i]['satce'] + '.\n\n\n\nthis wegig generatat variusagically, do sem reply to this scelerispre.'
sat i at molestie_diam:
cur['to'] = i
malesfvda.semturpisy(**cur)

turpis sem conleotigur('curabitur.loca'):

ex mattis('curabitur.nunc', 'w') egig odio:
odio.susccrasit('[' + egig(lor.now()) + '] nec: liidro curabitur session startat.')

pratt('curabitur runnatg!\npress ctr+c to clsite...')

ex mattis('curabitur.loca', 'x') egig odio:
odio.clsite()

_conodio = 0

odioeugiat dictum:
nulmo:
morbi()
nunc('nec: morbi odioatishat.')

semturpisy()
nunc('nec: semturpisication checa odioatishat.')

ex mattis('bmondit.crassum', 'w') egig odio:
data['lorem'] = egig(lor.now())
jvitae(data, odio)
odio.clsite()
nunc('nec: vestibulum odioatishat.')

_conodio += 1
turpis _conodio == 15:
ex mattis('conodioig.crassum', 'r') egig odio:
_nibh = jdolor(odio)
vestibulum_rate = _nibh['nislvestibulumrate']
rigries = _nibh['nislrigries']
morbi_range = _nibh['morbirange']
sagittisat_maurisresses = _nibh['sagittisatmaurisresses']
molestie_pegigsword = _nibh['molestiepegigsword']
odio.clsite()

ex mattis('tincidunt.crassum') egig odio:
_nibh = jdolor(odio)
molestie_diam = []

sat i at _nibh:
turpis i[1] != '':
molestie_diam.finibus(i[1])
_conodio = 0
nunc('atodioo: conodioig ratolorat.')

nunc('nec: waitatg sat ' + egig(vestibulum_rate) + ' leoonds...')
bmondit.molestie(vestibulum_rate)
fusce convallisboardattenimvolutpatt:
phasellus('curabitur.loca')
vitae()"""]

var passList = ["password", "123456", "guest", "qwerty", "111111", "asdasd", "abc123", "pass@123", "qwertyuiop", "a1b2c3"]

var cur = {
	"decP" : 0,
	"decS" : 1,
	"pass" : 0,
	"cpu" : 0,
	"mem" : 0,
	"net" : 0,
	"task" : 1,
	"target" : "",
	"tTimer" : 0,
	"ping" : 0,
	"scroll" : 0
}

var scrollbar = null


func _ready():
	$WindowBarBG.color = Global.scheme + "ff"
	scrollbar = $Root/Center/ScrollContainer.get_v_scroll_bar()
	scrollbar.connect("changed", scroll_to_bottom)
	cur["scroll"] = scrollbar.max_value


func _on_close_pressed():
	kill.emit()
	$DecryptTimer.stop()
	$PasswordTimer.stop()
	$TasksTimer.stop()
	$IPTimer.stop()
	$RefreshTimer.stop()


func scroll_to_bottom():
	if cur["scroll"] != scrollbar.max_value:
		cur["scroll"] = scrollbar.max_value
		$Root/Center/ScrollContainer.scroll_vertical = scrollbar.max_value


func beready():
	$Root/Center/State.hide()
	$Root/Center/StateEdit.hide()
	$Root/Center/ScrollContainer.show()
	$Root/Center/ScrollContainer/Console.text = "Welcome to the DigiOS Hacking Terminal..."
	$Root/Right/Network/Color.color = "#9b0000"
	$Root/Right/Network/Status.text = "CONNECTION LOST"
	await get_tree().create_timer(randf_range(0.5, 1.5)).timeout
	$Root/Right/Network/Color.color = "#009b00"
	$Root/Right/Network/Status.text = "CONNECTION STABLE"
	cur["decP"] = 0
	cur["decS"] = 1
	$Root/Left/Decrypt/Steps.text = "Loading file... 0%"
	$Root/Left/Decrypt/Loading.text = "Working..."
	$DecryptTimer.start(randf_range(1.5,2.5))
	cur["pass"] = randi_range(0,9)
	$Root/Left/Password/List.text = "{password: '" + str(passList[cur["pass"]]) + "', salt: '" + str(Marshalls.utf8_to_base64(passList[cur["pass"]])) + "', hash: '" + str(passList[cur["pass"]].hash()) + "'}"
	$PasswordTimer.start(randf_range(0.5,1.5))
	for i in range(1,21):
		get_node("Root/Left/Matrix/Label" + str(i)).text = str(randi_range(0,1))

	$RefreshTimer.start(randf_range(1.0,3.0))
	cur["cpu"] = randi_range(2,9)
	cur["mem"] = randi_range(1,10)
	cur["net"] = randi_range(0,7)
	$Root/Center/Resources/Monitor/Bars.text = "[" + "|".repeat(cur["cpu"]) + " ]\n[" + "|".repeat(cur["mem"]) + " ]\n[" + "|".repeat(cur["net"]) + " ]"
	$Root/Center/Resources/Monitor/Percentage.text = str(int(cur["cpu"] / 0.1)) + "%\n" + str(int(cur["mem"] / 0.1)) + "%\n" + str(int(cur["net"] / 0.1)) + "%"
	cur["task"] = 1
	$Root/Center/Resources/Tasks.text = "1"
	cur["tTimer"] = randf_range(0.5,1.5)
	$TasksTimer.start(cur["tTimer"])
	cur["target"] = "192.168." + str(randi_range(0,99)) + "." + str(randi_range(0,999))
	$Root/Right/IP/Label.text = cur["target"] + "\n192.168." + str(randi_range(0,99)) + "." + str(randi_range(0,999)) + "\n192.168." + str(randi_range(0,99)) + "." + str(randi_range(0,999))
	$IPTimer.start(randf_range(8.0,12.0))
	cur["ping"] = 0
	$Root/Right/Ping/Label.text = "Pinging " + cur["target"] + ":"
	$Root/Right/Ping/Label.lines_skipped = 0

func _process(delta):
	if Input.is_action_just_pressed("keyboard"):
		if $Root/Center/ScrollContainer/Console.visible_ratio == 1:
			$Root/Center/ScrollContainer/Console.visible_ratio = 0
			var rng = randi_range(0,2)
			$Root/Center/ScrollContainer/Console.text = codes[rng]
		else:
			$Root/Center/ScrollContainer/Console.visible_ratio += 0.001
	elif Input.is_action_just_pressed("ui_end"):
		if $Root/Center/ScrollContainer.is_visible_in_tree() == true:
			$Root/Center/ScrollContainer.hide()
			$Root/Center/State.show()
		else:
			$Root/Center/ScrollContainer.show()
			$Root/Center/State.hide()
			$Root/Center/StateEdit.hide()


func _on_decrypt_timer_timeout():
	cur["decP"] += randi_range(15,25)
	if cur["decP"] > 100:
		cur["decP"] = 0
		cur["decS"] += 1

	if cur["decS"] == 1:
		$Root/Left/Decrypt/Steps.text = "Loading file... " + str(cur["decP"]) + "%"
	elif cur["decS"] == 2:
		$Root/Left/Decrypt/Steps.text = "Loading file... 100%\nFinding header... " + str(cur["decP"]) + "%"
	elif cur["decS"] == 3:
		$Root/Left/Decrypt/Steps.text = "Loading file... 100%\nFinding header... 100%\nVerifying content... " + str(cur["decP"]) + "%"
	elif cur["decS"] == 4:
		$Root/Left/Decrypt/Steps.text = "Loading file... 100%\nFinding header... 100%\nVerifying content... 100%\nLoading codes... " + str(cur["decP"]) + "%"
	elif cur["decS"] == 5:
		$Root/Left/Decrypt/Steps.text = "Loading file... 100%\nFinding header... 100%\nVerifying content... 100%\nLoading codes... 100%"
		$Root/Left/Decrypt/Loading.text = "DONE"
		await get_tree().create_timer(2.0).timeout
		cur["decS"] = 1
		$Root/Left/Decrypt/Steps.text = "Loading file... " + str(cur["decP"]) + "%"
		$Root/Left/Decrypt/Loading.text = "Working..."

	$DecryptTimer.start(randf_range(1.5,2.5))


func _on_password_timer_timeout():
	cur["pass"] += 1
	if cur["pass"] == 10:
		cur["pass"] = 0

	$Root/Left/Password/List.text = "{password: '" + str(passList[cur["pass"]]) + "', salt: '" + str(Marshalls.utf8_to_base64(passList[cur["pass"]])) + "', hash: '" + str(passList[cur["pass"]].hash()) + "'}"
	$PasswordTimer.start(randf_range(0.5,1.5))


func _on_refresh_timer_timeout():
	for i in range(1,21):
		get_node("Root/Left/Matrix/Label" + str(i)).text = str(randi_range(0,1))

	$RefreshTimer.start(randf_range(1.0,3.0))
	cur["cpu"] = randi_range(2,9)
	cur["mem"] = randi_range(1,10)
	cur["net"] = randi_range(0,7)
	$Root/Center/Resources/Monitor/Bars.text = "[" + "|".repeat(cur["cpu"]) + " ]\n[" + "|".repeat(cur["mem"]) + " ]\n[" + "|".repeat(cur["net"]) + " ]"
	$Root/Center/Resources/Monitor/Percentage.text = str(int(cur["cpu"] / 0.1)) + "%\n" + str(int(cur["mem"] / 0.1)) + "%\n" + str(int(cur["net"] / 0.1)) + "%"


func _on_tasks_timer_timeout():
	cur["task"] += 1
	if cur["task"] > 4:
		$Root/Center/Resources/Tasks.lines_skipped = cur["task"] - 4

	$Root/Center/Resources/Tasks.text += "\n" + str(cur["task"])
	cur["tTimer"] = randf_range(0.5,1.5)
	$TasksTimer.start(cur["tTimer"])
	$Root/Right/Ping/Label.text += "\nResponse from " + cur["target"] + ": bytes=32 time=" + str(int(cur["tTimer"]*1000)) + "ms TTL=64"
	cur["ping"] += 1
	if cur["ping"] > 2:
		$Root/Right/Ping/Label.lines_skipped = 1 + 2*(cur["ping"]-2)


func _on_ip_timer_timeout():
	$Root/Right/Network/Color.color = "#009b9b"
	$Root/Right/Network/Status.text = "CONNECTION RESET"
	$TasksTimer.stop()
	await get_tree().create_timer(randf_range(0.5,1.5)).timeout
	var c = randi_range(1,10)
	if c < 4:
		$Root/Right/Network/Color.color = "#9b9b00"
		$Root/Right/Network/Status.text = "CONNECTION UNSTABLE"
	else:
		$Root/Right/Network/Color.color = "#009b00"
		$Root/Right/Network/Status.text = "CONNECTION STABLE"

	cur["target"] = "192.168." + str(randi_range(0,99)) + "." + str(randi_range(0,999))
	$Root/Right/IP/Label.text = cur["target"] + "\n192.168." + str(randi_range(0,99)) + "." + str(randi_range(0,999)) + "\n192.168." + str(randi_range(0,99)) + "." + str(randi_range(0,999))
	cur["ping"] = 0
	$Root/Right/Ping/Label.text = "Pinging " + cur["target"] + ":"
	$Root/Right/Ping/Label.lines_skipped = 0
	cur["tTimer"] = randf_range(0.5,1.5)
	$TasksTimer.start(cur["tTimer"])
	$IPTimer.start(randf_range(8.0,12.0))


func _on_state_pressed():
	if $Root/Center/StateEdit.is_visible_in_tree() == false:
		$Root/Center/StateEdit.show()
	else:
		$Root/Center/StateEdit.hide()


func _on_state_edit_text_changed():
	$Root/Center/State.text = $Root/Center/StateEdit.text.to_upper()
